<resources>
    <string name="app_name">swipe_view</string>
    <string name="app_scheme">elandmall</string>
    <string name="action_settings">Server_Settings</string>
    <string name="action_upload">이미지 올리기</string>
    <string name="title_alert">알림</string>
    <string name="alert_dialog_ok">확인</string>
    <string name="alert_dialog_cancel">취소</string>
    <string name="push_popup_close">닫기</string>
    <string name="push_popup_detail">자세히 보기</string>
    <string name="err_no_network">네트워크가 연결되어 있지 않습니다. 네트워크 연결상태를 확인 하신 후 다시 시도하여 주시기 바랍니다.</string>
    <string name="err_network_error">네트워크 연결이 원활하지 않습니다.\n잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="err_network_data">데이터 처리 중 오류가 발생하였습니다.\n잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="err_image_download">공유하고자 하는 이미지를 다운받을 수 없어 인스타그램 공유하기를 진행할 수 없습니다. 불편을 드려 죄송합니다.</string>
    <string name="network_data_fail">데이터를 가져오지 못하였습니다.\n잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="err_data_restart">데이터 처리 중 오류가 발생하였습니다.\n앱을 다시 시작합니다.</string>
    <string name="err_data_elandmade">브랜드 검색에 시간이 소요되고있습니다.</string>
    <string name="data_loading_txt">데이터를 로딩중입니다.</string>
    <string name="alert_txt_parsing_err">데이터 처리 중 오류가 발생하였습니다.\n잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="alert_txt_data_error">데이터 수신 중 오류가 발생하였습니다.\n잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="guide_back_end">"이전" 버튼을 한 번 더 누르시면 앱이 종료됩니다.</string>
    <string name="alert_txt_force_update">새 버전이 업데이트 되었습니다.\n원활한 서비스 이용을 위해\n업데이트를 꼭 진행해주세요.</string>
    <string name="alert_txt_update">새 버전이 업데이트 되었습니다.\n지금 바로 업데이트 하시겠습니까?</string>
    <string name="alert_txt_ssl_page">서비스 접속이 원활하지 않습니다. 다시 한번 시도해 주세요.</string>
    <string name="alert_txt_err">"서명키가 변조되어 사용을 종료합니다."</string>
    <string name="btn_not_approve">허용안함</string>
    <string name="btn_approve">승인</string>
    <string name="btn_retry">재시도</string>
    <string name="btn_app_close">App 종료</string>
    <string name="btn_update">업데이트</string>
    <string name="alert_btn_close">종료</string>
    <string name="alert_btn_later">나중에</string>
    <string name="toast_push_accept">알림(PUSH)메세지 수신동의가 ‘수신‘으로 설정되었습니다\n%1$s(%2$s)</string>
    <string name="toast_push_deny">알림(PUSH)메세지 수신동의가 ‘수신 안 함‘으로 설정되었습니다\n%1$s(%2$s)</string>
    <string name="noti_image">두손가락을 이용해 아래로 당겨주세요.</string>
    <string name="txt_not_again">오늘 하루 그만 보기</string>
    <string name="alert_permission_denined">권한 설정이 제대로 이뤄지지 않았습니다.</string>
    <string name="err_image_data">이미지 처리 중 오류가 발생하였습니다.\n다시 시도해 주세요.</string>
    <string name="err_image_size_above_5m">5MB 이하의 이미지만 등록 가능합니다.</string>
    <string name="loading_default">잠시만 기다려주세요.</string>
    <string name="loading_custom">&lt;b&gt;%s&lt;/b&gt;님</string>
    <string name="loading_modern_page">이랜드몰 통합 %s로 이동합니다.</string>
    <string name="loading_my_page">마이페이지</string>
    <string name="loading_cart">장바구니</string>
    <string name="loading_cust_center">고객센터</string>
    <string name="login_user_name">%s 님</string>
    <string name="cate_total_plan_cnt">전체 : %s</string>
    <string name="txt_get_data">정보를 받고 있습니다.</string>
    <string name="txt_push_approve">이랜드몰에서 쇼핑혜택 알림\n메시지(특가, 이벤트 등)를 보내고자 합니다.</string>
    <string name="txt_push_approve_sub">‘카테고리 메뉴>설정>알림메시지 수신’\n에서 설정 변경 가능</string>
    <string name="txt_dialog_turnoff">다시 보지 않기</string>
    <string name="btn_home">홈</string>
    <string name="btn_category">카테고리</string>
    <string name="btn_delivery">주문조회</string>
    <string name="btn_alim">쇼핑알림</string>
    <string name="btn_more">더보기</string>
    <string name="btn_recent">최근본상품</string>
    <string name="btn_counsel">1:1문의</string>
    <string name="btn_notice">공지사항</string>
    <string name="btn_setting">설정</string>
    <string name="tag_home">home</string>
    <string name="tag_category">ctg</string>
    <string name="tag_delivery">delivery</string>
    <string name="tag_alim">alim</string>
    <string name="tag_more">more</string>
    <string name="tag_recent">lately_url</string>
    <string name="tag_counsel">question_url</string>
    <string name="tag_notice">notice_url</string>
    <string name="tag_setting">set</string>
    <string name="title_alarm">알림 메세지 함</string>
    <string name="alarm_guide_old_mesg">• 메세지 유효기간이 지나면 자동 삭제되며, 운영정책에 따라 예고 없이 삭제될 수 있습니다.</string>
    <string name="alarm_guide_old_mesg2">• 과거 전송된 메시지는 현재 내용과 상이할 수 있습니다.</string>
    <string name="no_alarm">최근에 받은 알림이 없습니다.</string>
    <string name="txt_select_image">이미지를 선택하세요</string>
    <string name="btn_back_list">목록으로</string>
    <string-array name="attach_menu">
        <item>갤러리 선택</item>
        <item>카메라 선택</item>
    </string-array>
    <string-array name="attach_gallery">
        <item>갤러리 선택</item>
    </string-array>
    <string name="search_barcode_title">QR/바코드 검색</string>
    <string name="search_barcode_msg">화면 중앙에 위치시키면 자동으로 인식합니다.</string>
    <string name="result_err_barcode">검색한 상품이\n존재하지 않습니다.</string>
    <string name="setting_title">설정</string>
    <string name="setting_logined_msg">님, 반갑습니다</string>
    <string name="setting_login_msg">로그인 해주세요.</string>
    <string name="setting_login_auto">자동 로그인 설정</string>
    <string name="setting_auto_on">ON</string>
    <string name="setting_auto_off">OFF</string>
    <string name="setting_push_noti">쇼핑혜택 알림 메시지 수신</string>
    <string name="setting_push_noti_msg">본 설정은 해당 기기에서만 유효하며\n이벤트, 행사등의 다양한 쇼핑정보 및\n혜택관련 알림(Push)메시지를 받습니다.</string>
    <string name="setting_push_mkt">광고성 알림(Push) 메세지 수신</string>
    <string name="setting_push_mkt_msg">이벤트, 행사 등의 다양한 쇼핑정보 및 혜택 관련 알림 메시지를 받습니다.</string>
    <string name="setting_ver_info">버전 정보</string>
    <string name="setting_cur_version">현재버전 %s </string>
    <string name="setting_new_version">최신버전 %s</string>
    <string name="setting_customer">고객센터</string>
    <string name="setting_customer_ekims">킴스클럽</string>
    <string name="setting_customer_remark">상담시간 : 오전 9시~ 오후 6시\n토요일, 공휴일은 휴무</string>
    <string name="setting_btn_login">로그인</string>
    <string name="setting_btn_login_en">Login</string>
    <string name="setting_btn_logout">로그아웃</string>
    <string name="setting_btn_logout_en">Logout</string>
    <string name="setting_btn_update">업데이트</string>
    <string name="setting_dlg_logout_msg">로그아웃 하시겠습니까?</string>
    <string name="setting_logout_done">로그아웃 되었습니다</string>
    <string name="setting_login_done">로그인 되었습니다</string>
    <string name="setting_push_delay">서버에서 응답이 지연되고 있습니다\n잠시 후 다시 확인 바랍니다.</string>
    <string name="server_test_msg">서버가 변경되었습니다\n앱 종료 후 다시 시작해주세요</string>
    <string-array name="server_type">
        <item>상용서버</item>
        <item>개발서버</item>
        <item>QA서버</item>
        <item>Stage서버</item>
        <item>도메인입력</item>
    </string-array>
    <string name="home_time_title">타임세일</string>
    <string name="btn_brand">브랜드</string>
    <string name="tab_han">ㄱㄴㄷ</string>
    <string name="tab_abc">ABC</string>
    <string name="search_hint">검색어를 입력해 주세요</string>
    <string name="search_popular">인기 검색어</string>
    <string name="search_recent">최근검색어</string>
    <string name="search_event">추천기획전/이벤트</string>
    <string name="search_plan">추천 기획전</string>
    <string name="search_recommend_null">입력하신 단어가 들어가 있는 추천어가 없습니다.</string>
    <string name="search_recent_null">최근 검색어 내역이 <b>없습니다.</b></string>
    <string name="search_recent_goods_list_null">최근 본 상품 내역이 <b>없습니다.</b></string>
    <string name="need_api">API 요청</string>
    <string name="search_multi_select">*중복선택이 가능합니다.</string>
    <string name="cart_success">선택한 상품이\n장바구니에 담겼습니다.</string>
    <string name="cart_option">이 상품은 옵션이 있는\n상품입니다.</string>
    <string name="cart_option_sub">상품 상세페이지에서\n옵션을 선택해 주세요.</string>
    <string name="cart_option_coming_soon">%s년 %s월 %s일 %s시 %s분부터\n구매 가능한 커밍순 상품입니다.</string>
    <string name="cart_option_coming_soon_reserve">%s년 %s월 %s일 %s시 %s분부터\n구매 가능한 예약 상품입니다.</string>
    <string name="coming_soon_text">%s월 %s일 %s:%s 판매</string>
    <string name="wish_success">찜 목록에\n추가되었습니다.</string>
    <string name="wish_duple">찜 목록에 이미\n등록 되어있는 상품입니다.</string>
    <string name="wish_corporate">구매에 불편을 드려 죄송합니다.\n\n본 상품은 브랜드와 협의 중인 상품으로,기업회원 대상으로 서비스를 확대할 예정입니다.</string>
    <string name="txt_clipboard_copy">클립보드에 URL이 복사되었습니다.</string>
    <string name="txt_instagram_uninstall">인스타그램이 설치되어 있지 않습니다.</string>
    <string name="go_cart">장바구니 가기</string>
    <string name="benefit_freedeli">무료배송</string>
    <string name="benefit_discount">즉시할인</string>
    <string name="benefit_setdisc">세트할인</string>
    <string name="benefit_gift">사은품</string>
    <string name="benefit_onemore">하나더(+1)</string>
    <string name="benefit_welfare">복지몰상품</string>
    <string name="txt_search_null_key">에 대한 \n검색결과가 없습니다.</string>
    <string name="txt_search_null_data">선택한 조건의 상품이 없습니다.\n다시 선택해주세요.</string>
    <string name="txt_search_rise_rank_title">실시간 급상승 검색어</string>
    <string name="txt_search_popular_rank_title">실시간 인기 검색어</string>
    <string name="txt_search_none_rkeyword">추천 검색어가 없습니다.</string>
    <string name="txt_search_null_msg1">검색어가 올바른지 다시 확인 후 정확하게 입력해 주세요.</string>
    <string name="txt_search_null_msg2">상품명을 정확히 모르시면 상품과 관련된 단어를 입력해 보세요.</string>
    <string name="txt_search_null_msg3">상품 카테고리, 제조사, 가격 등을 입력하시면 더 정확한 검색 결과를 확인하실 수 있습니다.</string>
    <string name="txt_search_null_msg4">상품이 매진되거나, 품절 되었을 경우 검색 되지 않을 수 있습니다.</string>
    <string name="txt_kakao_link_tit">바로가기</string>
    <string name="category_title">CATEGORY</string>
    <string name="lucky_buy_txt">%s개 구매</string>
    <string name="lucky_buy_txt2">%s\n구매</string>
    <string name="txt_pw_change_tit">장기간 비밀번호 미 변경 안내</string>
    <string name="txt_pw_change_msg">90일 동안 비밀번호를 변경하지 않으셨습니다. 지금 변경하시겠습니까?</string>
    <string name="txt_pw_change_msg2">비밀번호 변경 시 참조하세요.</string>
    <string name="txt_pw_change_msg3">연속적인 숫자나 생일, 전화번호등 추측하기 쉬운 개인정보 및 아이디와 비슷한 비밀번호 사용을 피하시기 바랍니다.</string>
    <string name="txt_pw_change_msg4">비밀번호는 영대문자, 영소문자, 숫자, 특수문자 중 3종류 이상을 조합하여, 총 8~16자리로 구성하셔야 합니다.</string>
    <string name="txt_pw_change_btn_can">90일이후에변경</string>
    <string name="txt_pw_change_btn_con">지금변경</string>
    <string name="txt_pw_tmp_tit">임시 비밀번호 로그인 안내</string>
    <string name="txt_pw_tmp_msg">고객님은 임시 발급된 비밀번호로 로그인 하셨습니다.</string>
    <string name="txt_pw_tmp_msg2">안전한 개인정보 보호를 위해 임시비밀번호를 변경해 주세요.</string>
    <string name="txt_pw_tmp_btn_can">다음에변경</string>
    <string name="txt_pw_tmp_btn_con">지금변경</string>
    <string name="alert_txt_pointdonate">복지몰 운영 종료 후 잔여 포인트 기부에 동의하시겠습니까?\n동의 이후에는 취소 신청이 되지 않으니, 신중히 선택해 주세요</string>
    <string name="alert_txt_pointdonate_success">감사합니다. 정상 신청되었습니다.\n기부된 포인트는 연말소득공제가 가능하며,\n연말정산 시 이랜드 복지 재단 홈페이지를 통해 기부금 영수증을 발급 받으실 수 있습니다.</string>
    <string name="alert_txt_pointdonate_fail">이미 신청하셨습니다.</string>
    <string name="alert_txt_contact_fail">유효하지 않은 번호입니다.</string>
    <string name="txt_header_title_luckdeal">럭키딜</string>
    <string name="txt_header_title_luckdeal_today">오늘의 럭키딜</string>
    <string name="txt_buylist_empty">최근 6개월간\n구매하신 상품이 없습니다.</string>
    <string-array name="items_array_expandable_level_one">
        <item>Level 1.1</item>
        <item>Level 1.2</item>
        <item>Level 1.3</item>
    </string-array>
    <string-array name="items_array_expandable_level_one_one_child">
        <item>Level 1.1.1</item>
        <item>Level 1.1.2</item>
    </string-array>
    <string-array name="items_array_expandable_level_one_two_child">
        <item>Level 1.2.1</item>
    </string-array>
    <string-array name="items_array_expandable_other_child">
        <item>Second Level 01</item>
        <item>Second Level 02</item>
        <item>Second Level 03</item>
    </string-array>
    <string-array name="items_array_expandable_level_three">
        <item>Child Level 01</item>
        <item>Child Level 02</item>
    </string-array>
</resources>